M       vbm_vol_pbtp.mexglx
M       vbm_vol_pbtp.mexmaci64
M       vbm_vol_pbtp.mexw32
M       vbm_vol_pbtp.mexw64
M       vbm_vol_simgrow.mexa64
M       vbm_vol_simgrow.mexglx
M       vbm_vol_simgrow.mexmaci64
M       vbm_vol_simgrow.mexw32
M       vbm_vol_simgrow.mexw64

(1) Corrected typos in vbm_vol_downcut.c, Kmeans.c, genus0.c.
(2) Added vbm_vol_genus0.c and genus0.*
(3) Replaced isosurface in vbm_surf_createCS.m by vbm_vol_genus0.
(4) Added missing extension ee in vbm_surf_createCS.m.
(5) Changed compile.m and Makefile.vbm to consider new files.
(6) Recompiled mexfiles for all systems.
(8) Updated cg_check_cov.m that can now deal with volume and surface data. 
(9) Deleted cg_check_mesh_cov.m that is replaced by cg_check_cov.m.
(10) Updated cg_vbm_tools.m and spm_vbm12.m for new cg_check_cov.m.
(11) Added fsaverage/fsavg.index2D_256x128.txt (index for 2D map).
(12) Redefined FNAN and FINFINITY in vol_vol_edist.c to work with MSC.


------------------------------------------------------------------------
r557 | gaser | 2014-01-27 11:12:50

M       CHANGES.txt
A       vbm_vol_genus0.mexa64
A       vbm_vol_genus0.mexglx
A       vbm_vol_genus0.mexmaci64
A       vbm_vol_genus0.mexw32
A       vbm_vol_genus0.mexw64

Added missing vbm_vol_genus0.mex* files.
------------------------------------------------------------------------
r558 | gaser | 2014-01-27 11:14:11

M       CHANGES.txt
 M      fsaverage/fsavg.index2D_256x128.txt
 M      genus0.c
 M      genus0.h
M       vbm12.man
MM      vbm_vol_genus0.c

Added missing vbm_vol_genus0.mex* files.
------------------------------------------------------------------------
r559 | gaser | 2014-01-27 11:14:40

M       CHANGES.txt
 M      vbm_vol_genus0.mexa64
 M      vbm_vol_genus0.mexglx
 M      vbm_vol_genus0.mexmaci64
 M      vbm_vol_genus0.mexw32
 M      vbm_vol_genus0.mexw64

Added missing vbm_vol_genus0.mex* files.
------------------------------------------------------------------------
r560 | gaser | 2014-01-27 11:14:53